<?xml version="1.0"?>
<package format="3">
  <name>robot_action_demo</name>
  <version>0.0.0</version>
  <description>Robot action demo Python nodes</description>
  <maintainer email="sciencestar9346@163.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>robot_action_demo_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>